<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/bgPeach">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:src="@drawable/bee_splash_foreground"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_msg"
        android:textSize="30dp"
        android:textColor="@color/fgMaroon"
        android:id="@+id/welcome_msg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_centerHorizontal="true"
        android:paddingTop="50dp"
        android:text="@string/welcome_desc"
        android:textSize="15dp"
        android:textColor="@color/fgMaroon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_id"
        android:layout_centerHorizontal="true"
        android:paddingTop="120dp"
        android:text="@string/created_by"
        android:textSize="15dp"
        android:textColor="@color/maroon_200"/>

</RelativeLayout>
