<?xml version="1.0" encoding="utf-8"?>
<!--Scroll View to enable scrolling the contents-->
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bgPeach"
    tools:context=".GameRules">

<!--        Constraint layout inside scrollview - elements are placed with constraints-->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="350dp"
        android:background="@color/bgPeach">

<!--        TextView For the Title-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:textSize="25dp"
            android:gravity="center"
            android:background="@color/maroon_700"
            android:textColor="@color/white"
            android:text="@string/game_rule_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvRule1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--      TextView  For the rules-->
<!--Rule #1-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRule1"
            android:textColor="@color/maroon_700"
            android:text="@string/game_rule_1"
            android:textSize="15sp"
            android:padding="5dp"
            android:background="@color/orange_500"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintBottom_toTopOf="@id/tvRule2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--Rule #2-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRule2"
            android:textColor="@color/maroon_700"
            android:text="@string/game_rule_2"
            android:textSize="15sp"
            android:padding="5dp"
            android:background="@color/orange_500"
            app:layout_constraintTop_toBottomOf="@id/tvRule1"
            app:layout_constraintBottom_toTopOf="@id/tvRule3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--            Rule #3-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRule3"
            android:textColor="@color/maroon_700"
            android:text="@string/game_rule_3"
            android:textSize="15sp"
            android:padding="5dp"
            android:background="@color/orange_500"
            app:layout_constraintTop_toBottomOf="@id/tvRule2"
            app:layout_constraintBottom_toTopOf="@id/tvRule4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--            Rule #4-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRule4"
            android:textColor="@color/maroon_700"
            android:text="@string/game_rule_4"
            android:textSize="15sp"
            android:padding="5dp"
            android:background="@color/orange_500"
            app:layout_constraintTop_toBottomOf="@id/tvRule3"
            app:layout_constraintBottom_toTopOf="@id/tvRule5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--            Rule # 5-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRule5"
            android:textColor="@color/maroon_700"
            android:text="@string/game_rule_5"
            android:textSize="15sp"
            android:padding="5dp"
            android:background="@color/orange_500"
            app:layout_constraintTop_toBottomOf="@id/tvRule4"
            app:layout_constraintBottom_toTopOf="@id/tvRuleMessage"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--            Good Luck message for the user-->
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRuleMessage"
            android:textColor="@color/maroon_700"
            android:text="@string/game_rule_message"
            android:textSize="20sp"
            android:gravity="center"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/tvRule5"
            app:layout_constraintBottom_toTopOf="@id/btnBegin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

<!--        Button to start the game-->
        <Button android:layout_width="wrap_content"
            android:id="@+id/btnBegin"
            android:text="@string/start_button"
            app:layout_constraintTop_toBottomOf="@id/tvRuleMessage"
            app:layout_constraintBottom_toTopOf="@id/btnStat"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_height="wrap_content"
            android:onClick="startQuiz"/>

<!--        To view previous scores-->
        <Button
            android:id="@+id/btnStat"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/stats"
            android:textAlignment="center"
            android:textColor="@color/fgMaroon"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBegin"
            app:layout_constraintVertical_bias=".2"
            android:onClick="ViewStats"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>