<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bgPeach"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bee_splash_foreground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/welcome_msg"/>

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_msg"
        android:textColor="@color/fgMaroon"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/logo_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/button_login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_msg"
        app:layout_constraintVertical_bias=".2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:id="@+id/tvEmpty"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        android:text="@string/sign_up_message"
        android:textSize="10sp"
        android:textColor="@color/fgMaroon"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/button_register"
        android:textAlignment="center"
        android:textColor="@color/fgMaroon"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintVertical_bias=".2" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>